# HRbot

./: .gitignore  pyproject.toml  requirements.txt
src/: requirements.txt
src/hr_bot/: crew.py  llm_config.py  main.py
src/hr_bot/config/: agents.yaml  tasks.yaml
src/hr_bot/core/: embedder_config.py  knowledge_config.py  llm_config.py
src/hr_bot/flows/: hr_query_flow.py
